@@ -21,25 +21,17 @@ import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.openqa.selenium.json.Json.LIST_OF_MAPS_TYPE;
 import static org.openqa.selenium.json.Json.MAP_TYPE;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.ImmutableSortedSet;
-import com.google.common.collect.Ordering;
-import com.google.common.collect.Sets;
-import com.google.common.io.CharSource;
-import com.google.common.io.CharStreams;
-import com.google.common.io.FileBackedOutputStream;
 import java.io.Closeable;
 import java.io.IOException;
-import java.io.OutputStreamWriter;
 import java.io.Reader;
-import java.io.StringReader;
 import java.io.UncheckedIOException;
-import java.io.Writer;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
+import java.util.LinkedHashMap;
+import java.util.LinkedHashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
@@ -53,6 +45,7 @@ import org.openqa.selenium.internal.Require;
 import org.openqa.selenium.json.Json;
 import org.openqa.selenium.json.JsonInput;
 import org.openqa.selenium.json.JsonOutput;
+import org.openqa.selenium.remote.http.Contents;
 
 public class NewSessionPayload implements Closeable {
 
@@ -60,43 +53,23 @@ public class NewSessionPayload implements Closeable {
   private static final Predicate<String> ACCEPTED_W3C_PATTERNS = new AcceptedW3CCapabilityKeys();
 
   private final Json json = new Json();
-  private final FileBackedOutputStream backingStore;
-  private final ImmutableSet<Dialect> dialects;
+  private final Contents.Supplier supplier;
+  private final Set<Dialect> dialects;
 
-  private NewSessionPayload(Reader source) {
-    // Dedicate up to 10% of all RAM or 20% of available RAM (whichever is smaller) to storing this
-    // payload.
-    int threshold =
-        (int)
-            Math.min(
-                Integer.MAX_VALUE,
-                Math.min(
-                    Runtime.getRuntime().freeMemory() / 5, Runtime.getRuntime().maxMemory() / 10));
+  private NewSessionPayload(Contents.Supplier supplier) {
+    this.supplier = supplier;
 
-    backingStore = new FileBackedOutputStream(threshold);
-    try (Writer writer = new OutputStreamWriter(backingStore, UTF_8)) {
-      CharStreams.copy(source, writer);
-    } catch (IOException e) {
-      throw new UncheckedIOException(e);
-    }
-
-    ImmutableSet.Builder<Dialect> dialects = ImmutableSet.builder();
+    Set<Dialect> dialects = new LinkedHashSet<>();
     try {
       if (isW3C()) {
         dialects.add(Dialect.W3C);
       }
 
-      this.dialects = dialects.build();
+      this.dialects = Set.copyOf(dialects);
 
       validate();
     } catch (IOException e) {
       throw new UncheckedIOException(e);
-    }
-
-    try {
-      source.close();
-    } catch (IOException e) {
-      // Ignore
     }
   }
 
@@ -109,9 +82,9 @@ public class NewSessionPayload implements Closeable {
     // We need to convert the capabilities into a new session payload. At this point we're dealing
     // with references, so I'm Just Sure This Will Be Fine.
     return create(
-        ImmutableMap.of(
+        Map.of(
             "capabilities",
-            ImmutableMap.of(
+            Map.of(
                 "firstMatch",
                 caps.stream().map(Capabilities::asMap).collect(Collectors.toList()))));
   }
@@ -123,23 +96,26 @@ public class NewSessionPayload implements Closeable {
     Require.precondition(
         source.containsKey("capabilities"), "New session payload must contain capabilities");
 
-    String json = new Json().toJson(Require.nonNull("Payload", source));
-    return new NewSessionPayload(new StringReader(json));
+    return new NewSessionPayload(Contents.asJson(Require.nonNull("Payload", source)));
   }
 
-  public static NewSessionPayload create(Reader source) {
-    return new NewSessionPayload(source);
+  public static NewSessionPayload create(Contents.Supplier supplier) {
+    return new NewSessionPayload(supplier);
+  }
+
+  public Contents.Supplier getSupplier() {
+    return supplier;
   }
 
   private void validate() throws IOException {
     Map<String, Object> alwaysMatch = getAlwaysMatch();
     if (alwaysMatch == null) {
-      alwaysMatch = ImmutableMap.of();
+      alwaysMatch = Map.of();
     }
     Map<String, Object> always = alwaysMatch;
     Collection<Map<String, Object>> firsts = getFirstMatches();
     if (firsts == null) {
-      firsts = ImmutableList.of(ImmutableMap.of());
+      firsts = List.of(Map.of());
     }
 
     if (firsts.isEmpty()) {
@@ -149,7 +125,8 @@ public class NewSessionPayload implements Closeable {
     firsts.stream()
         .peek(
             map -> {
-              Set<String> overlap = Sets.intersection(always.keySet(), map.keySet());
+              Set<String> overlap = new HashSet<>(always.keySet());
+              overlap.removeIf((e) -> !map.keySet().contains(e));
               if (!overlap.isEmpty()) {
                 throw new IllegalArgumentException(
                     "Overlapping keys between w3c always and first match capabilities: " + overlap);
@@ -164,11 +141,12 @@ public class NewSessionPayload implements Closeable {
             })
         .peek(
             map -> {
-              ImmutableSortedSet<String> nullKeys =
+              List<String> nullKeys =
                   map.entrySet().stream()
                       .filter(entry -> entry.getValue() == null)
                       .map(Map.Entry::getKey)
-                      .collect(ImmutableSortedSet.toImmutableSortedSet(Ordering.natural()));
+                      .sorted()
+                      .collect(Collectors.toList());
               if (!nullKeys.isEmpty()) {
                 throw new IllegalArgumentException(
                     "Null values found in w3c capabilities. Keys are: " + nullKeys);
@@ -176,10 +154,11 @@ public class NewSessionPayload implements Closeable {
             })
         .peek(
             map -> {
-              ImmutableSortedSet<String> illegalKeys =
+              List<String> illegalKeys =
                   map.keySet().stream()
                       .filter(ACCEPTED_W3C_PATTERNS.negate())
-                      .collect(ImmutableSortedSet.toImmutableSortedSet(Ordering.natural()));
+                      .sorted()
+                      .collect(Collectors.toList());
               if (!illegalKeys.isEmpty()) {
                 throw new IllegalArgumentException(
                     "Illegal key values seen in w3c capabilities: " + illegalKeys);
@@ -213,18 +192,13 @@ public class NewSessionPayload implements Closeable {
   }
 
   private void writeMetaData(JsonOutput out) throws IOException {
-    CharSource charSource = backingStore.asByteSource().asCharSource(UTF_8);
-    try (Reader reader = charSource.openBufferedStream();
+    try (Reader reader = Contents.reader(supplier, UTF_8);
         JsonInput input = json.newInput(reader)) {
       input.beginObject();
       while (input.hasNext()) {
         String name = input.nextName();
         switch (name) {
           case "capabilities":
-            // These fields were used by the (now defunct) JSON Wire Protocol, but we
-            // keep them here since we might see them from ancient clients.
-          case "desiredCapabilities":
-          case "requiredCapabilities":
             input.skipValue();
             break;
 
@@ -251,17 +225,15 @@ public class NewSessionPayload implements Closeable {
   }
 
   public Set<Dialect> getDownstreamDialects() {
-    return dialects.isEmpty() ? ImmutableSet.of(DEFAULT_DIALECT) : dialects;
+    return dialects.isEmpty() ? Set.of(DEFAULT_DIALECT) : dialects;
   }
 
   public Map<String, Object> getMetadata() {
-    Set<String> ignoredMetadataKeys =
-        ImmutableSet.of("capabilities", "desiredCapabilities", "requiredCapabilities");
+    Set<String> ignoredMetadataKeys = Set.of("capabilities");
 
-    CharSource charSource = backingStore.asByteSource().asCharSource(UTF_8);
-    try (Reader reader = charSource.openBufferedStream();
+    try (Reader reader = Contents.reader(supplier, UTF_8);
         JsonInput input = json.newInput(reader)) {
-      ImmutableMap.Builder<String, Object> toReturn = ImmutableMap.builder();
+      Map<String, Object> toReturn = new LinkedHashMap<>();
 
       input.beginObject();
       while (input.hasNext()) {
@@ -280,7 +252,7 @@ public class NewSessionPayload implements Closeable {
       }
       input.endObject();
 
-      return toReturn.build();
+      return Map.copyOf(toReturn);
     } catch (IOException e) {
       throw new UncheckedIOException(e);
     }
@@ -289,7 +261,7 @@ public class NewSessionPayload implements Closeable {
   @Override
   public void close() {
     try {
-      backingStore.reset();
+      supplier.close();
     } catch (IOException e) {
       throw new UncheckedIOException(e);
     }
@@ -308,26 +280,28 @@ public class NewSessionPayload implements Closeable {
       fromW3c = Stream.of(); // No W3C capabilities.
     } else {
       if (alwaysMatch == null) {
-        alwaysMatch = ImmutableMap.of();
+        alwaysMatch = Map.of();
       }
       Map<String, Object> always = alwaysMatch; // Keep the compiler happy.
       if (firsts == null) {
-        firsts = ImmutableList.of(ImmutableMap.of());
+        firsts = List.of(Map.of());
       }
 
       fromW3c =
           firsts.stream()
               .map(
-                  first ->
-                      ImmutableMap.<String, Object>builder().putAll(always).putAll(first).build());
+                  first -> {
+                    Map<String, Object> merged = new LinkedHashMap<>(always);
+                    merged.putAll(first);
+                    return Map.copyOf(merged);
+                  });
     }
 
     return fromW3c.distinct();
   }
 
   private boolean isW3C() throws IOException {
-    CharSource charSource = backingStore.asByteSource().asCharSource(UTF_8);
-    try (Reader reader = charSource.openBufferedStream();
+    try (Reader reader = Contents.reader(supplier, UTF_8);
         JsonInput input = json.newInput(reader)) {
       input.beginObject();
       while (input.hasNext()) {
@@ -343,8 +317,7 @@ public class NewSessionPayload implements Closeable {
   }
 
   private Map<String, Object> getAlwaysMatch() throws IOException {
-    CharSource charSource = backingStore.asByteSource().asCharSource(UTF_8);
-    try (Reader reader = charSource.openBufferedStream();
+    try (Reader reader = Contents.reader(supplier, UTF_8);
         JsonInput input = json.newInput(reader)) {
       input.beginObject();
       while (input.hasNext()) {
@@ -365,12 +338,11 @@ public class NewSessionPayload implements Closeable {
         }
       }
     }
-    return ImmutableMap.of();
+    return Map.of();
   }
 
   private Collection<Map<String, Object>> getFirstMatches() throws IOException {
-    CharSource charSource = backingStore.asByteSource().asCharSource(UTF_8);
-    try (Reader reader = charSource.openBufferedStream();
+    try (Reader reader = Contents.reader(supplier, UTF_8);
         JsonInput input = json.newInput(reader)) {
       input.beginObject();
       while (input.hasNext()) {
@@ -391,7 +363,7 @@ public class NewSessionPayload implements Closeable {
         }
       }
     }
-    return ImmutableList.of(ImmutableMap.of());
+    return List.of(Map.of());
   }
 
   @Override
