@@ -28,7 +28,6 @@ import static org.openqa.selenium.testing.drivers.Browser.IE;
 import static org.openqa.selenium.testing.drivers.Browser.SAFARI;
 
 import java.time.Duration;
-import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
@@ -45,17 +44,18 @@ class ExecutingAsyncJavascriptTest extends JupiterTestBase {
   public void setUp() {
     assumeTrue(driver instanceof JavascriptExecutor);
     executor = (JavascriptExecutor) driver;
-    driver.manage().timeouts().setScriptTimeout(Duration.ofMillis(5000));
+    driver.manage().timeouts().scriptTimeout(Duration.ofMillis(5000));
   }
 
   @Test
   @NotYetImplemented(value = CHROME, reason = "Default to 5s")
+  @NotYetImplemented(value = EDGE, reason = "Default to 5s")
   @NotYetImplemented(value = FIREFOX, reason = "Default to 5s")
   @NotYetImplemented(value = SAFARI, reason = "Default to 5s")
   public void shouldSetAndGetScriptTimeout() {
     Duration timeout = driver.manage().timeouts().getScriptTimeout();
     assertThat(timeout).hasMillis(30000);
-    driver.manage().timeouts().setScriptTimeout(Duration.ofMillis(3000));
+    driver.manage().timeouts().scriptTimeout(Duration.ofMillis(3000));
     Duration timeout2 = driver.manage().timeouts().getScriptTimeout();
     assertThat(timeout2).hasMillis(3000);
   }
@@ -184,7 +184,7 @@ class ExecutingAsyncJavascriptTest extends JupiterTestBase {
   @Test
   @NotYetImplemented(SAFARI)
   public void shouldTimeoutIfScriptDoesNotInvokeCallbackWithLongTimeout() {
-    driver.manage().timeouts().setScriptTimeout(Duration.ofMillis(500));
+    driver.manage().timeouts().scriptTimeout(Duration.ofMillis(500));
     driver.get(pages.ajaxyPage);
     assertThatExceptionOfType(ScriptTimeoutException.class)
         .isThrownBy(
@@ -198,7 +198,7 @@ class ExecutingAsyncJavascriptTest extends JupiterTestBase {
   @Ignore(IE)
   public void shouldDetectPageLoadsWhileWaitingOnAnAsyncScriptAndReturnAnError() {
     driver.get(pages.ajaxyPage);
-    driver.manage().timeouts().setScriptTimeout(Duration.ofMillis(100));
+    driver.manage().timeouts().scriptTimeout(Duration.ofMillis(100));
     assertThatExceptionOfType(WebDriverException.class)
         .isThrownBy(
             () -> executor.executeAsyncScript("window.location = '" + pages.dynamicPage + "';"));
@@ -243,7 +243,7 @@ class ExecutingAsyncJavascriptTest extends JupiterTestBase {
             t -> {
               Throwable rootCause = getRootCause(t);
               assertThat(rootCause).hasMessageContaining("errormessage");
-              assertThat(Arrays.asList(rootCause.getStackTrace()))
+              assertThat(List.of(rootCause.getStackTrace()))
                   .extracting(StackTraceElement::getMethodName)
                   .contains("functionB");
             });
@@ -265,7 +265,7 @@ class ExecutingAsyncJavascriptTest extends JupiterTestBase {
             "There should only be 1 DIV at this point, which is used for the butter message")
         .isEqualTo(1);
 
-    driver.manage().timeouts().setScriptTimeout(Duration.ofSeconds(15));
+    driver.manage().timeouts().scriptTimeout(Duration.ofSeconds(15));
     String text =
         (String)
             executor.executeAsyncScript(
@@ -316,7 +316,7 @@ class ExecutingAsyncJavascriptTest extends JupiterTestBase {
             + "xhr.send('');"; // empty string to stop firefox 3 from choking
 
     driver.get(pages.ajaxyPage);
-    driver.manage().timeouts().setScriptTimeout(Duration.ofSeconds(3));
+    driver.manage().timeouts().scriptTimeout(Duration.ofSeconds(3));
     String response = (String) executor.executeAsyncScript(script, pages.sleepingPage + "?time=2");
     assertThat(response.trim())
         .isEqualTo("<html><head><title>Done</title></head><body>Slept for 2s</body></html>");
@@ -330,7 +330,7 @@ class ExecutingAsyncJavascriptTest extends JupiterTestBase {
   @Ignore(value = SAFARI, reason = "Does not support alerts yet")
   public void throwsIfScriptTriggersAlert() {
     driver.get(pages.simpleTestPage);
-    driver.manage().timeouts().setScriptTimeout(Duration.ofMillis(5000));
+    driver.manage().timeouts().scriptTimeout(Duration.ofMillis(5000));
     assertThatExceptionOfType(UnhandledAlertException.class)
         .isThrownBy(
             () ->
@@ -349,7 +349,7 @@ class ExecutingAsyncJavascriptTest extends JupiterTestBase {
   @Ignore(value = SAFARI, reason = "Does not support alerts yet")
   public void throwsIfAlertHappensDuringScript() {
     driver.get(pages.slowLoadingAlertPage);
-    driver.manage().timeouts().setScriptTimeout(Duration.ofMillis(5000));
+    driver.manage().timeouts().scriptTimeout(Duration.ofMillis(5000));
     assertThatExceptionOfType(UnhandledAlertException.class)
         .isThrownBy(() -> executor.executeAsyncScript("setTimeout(arguments[0], 1000);"));
     // Shouldn't throw
@@ -364,7 +364,7 @@ class ExecutingAsyncJavascriptTest extends JupiterTestBase {
   @Ignore(value = SAFARI, reason = "Does not support alerts yet")
   public void throwsIfScriptTriggersAlertWhichTimesOut() {
     driver.get(pages.simpleTestPage);
-    driver.manage().timeouts().setScriptTimeout(Duration.ofMillis(5000));
+    driver.manage().timeouts().scriptTimeout(Duration.ofMillis(5000));
     assertThatExceptionOfType(UnhandledAlertException.class)
         .isThrownBy(
             () ->
@@ -382,7 +382,7 @@ class ExecutingAsyncJavascriptTest extends JupiterTestBase {
   @Ignore(value = SAFARI, reason = "Does not support alerts yet")
   public void throwsIfAlertHappensDuringScriptWhichTimesOut() {
     driver.get(pages.slowLoadingAlertPage);
-    driver.manage().timeouts().setScriptTimeout(Duration.ofMillis(5000));
+    driver.manage().timeouts().scriptTimeout(Duration.ofMillis(5000));
     assertThatExceptionOfType(UnhandledAlertException.class)
         .isThrownBy(() -> executor.executeAsyncScript(""));
     // Shouldn't throw
@@ -396,7 +396,7 @@ class ExecutingAsyncJavascriptTest extends JupiterTestBase {
   @Ignore(FIREFOX)
   @Ignore(value = SAFARI, reason = "Does not support alerts yet")
   public void includesAlertTextInUnhandledAlertException() {
-    driver.manage().timeouts().setScriptTimeout(Duration.ofMillis(5000));
+    driver.manage().timeouts().scriptTimeout(Duration.ofMillis(5000));
     String alertText = "Look! An alert!";
     assertThatExceptionOfType(UnhandledAlertException.class)
         .isThrownBy(
